[project]
name = "langchain_rag_chatbot"
version = "0.1.0"
description = "A simple dockerized langchain RAG agent chatbot."
authors = [
    {name = "bailey",email = "bailey@sotek.dev"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain (>=1.2.7,<2.0.0)",
    "openai (>=2.16.0,<3.0.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "fastapi (>=0.128.0,<0.129.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.14"
pytest = "^9.0.2"
httpx = "^0.28.1"

