[project]
name = "neo4j-etl"
version = "0.1.0"
description = "An ETL job for migrating CSV data into a neo4j graph database."
authors = [
    {name = "bailey",email = "bailey@sotek.dev"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "neo4j (>=6.1.0,<7.0.0)",
    "retry (>=0.9.2,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
